--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "naive-ui": "^2.34.4",
+    "naive-ui": "^2.38.1",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vue3-virtual-scroll-list": "^0.2.1"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
