[Fix] 🐛 Nightly Branch in CodeSandbox Deploy

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -42,6 +42,7 @@ jobs:
           echo "BODY=Released on $(date +%Y-%m-%d)" >> $GITHUB_ENV
           DATE=$(date +%Y.%m.%d)
           sed -i "s/\"version\": \".*\"/\"version\": \"$DATE-nightly\"/g" frontend/package.json
+          sed -i 's|go-proxy-bingai/releases/latest|go-proxy-bingai/releases/download/nightly|g' .devcontainer/Dockerfile
 
       - name: Build Frontend
         run: |
@@ -57,6 +58,7 @@ jobs:
           git config --global user.email "zklcdc@qq.com"
           git config --global user.name "Harry-zklcdc"
           git add web/*
+          git add .devcontainer/Dockerfile
           git commit -m "[Upgrade] 🚀 Upload nightly webFile"
           git tag -a nightly -m "Released on $(date +%Y-%m-%d)"
           git push -f origin HEAD:nightly
